# weather-analysis-system

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
src/weather_analysis/: __init__.py  ai_analyzer.py  alerts.py  app.py  aqi_api.py  config.py  i18n.py  travel.py  visualization.py  weather_api.py
tests/: test_alerts.py  test_aqi.py  test_travel.py  test_uv.py
