[project]
name = "weather-analysis-system"
version = "1.2.0"
description = "智慧天氣分析系統 - 即時天氣查詢與 AI 智慧分析，支援台灣主要城市"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "William Cheng"}
]
requires-python = ">=3.10"
keywords = ["weather", "analysis", "streamlit", "ai", "taiwan"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
    "python-dotenv>=1.0.0",
    "openai>=1.3.0",
    "folium>=0.15.0",
    "streamlit-folium>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/lovexyz520/weather-analysis-system"
Repository = "https://github.com/lovexyz520/weather-analysis-system"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_analysis"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
